<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Pokedex</string>
    <string name="pokedex">Pokedex</string>
    <string name="team">Team</string>
    <string name="random">Random</string>
    <string name="search_pokemon">Search Pokemon</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="search_icon">Search Icon</string>
    <string name="pokemon_not_found">No pokemon found</string>
    <string name="pokemon_type">Pokemon Type</string>
    <string name="add_to_team">Add to Team</string>
    <string name="remove_from_team">Remove from Team</string>
    <string name="error_code">Error while fetching data: Error</string>
    <string name="remove">Remove</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pokemon_text">Pokemon Text</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="be_apart_of_the_all_exclusive_club_of_pok_fanatics">Be apart of the all-exclusive club of PokéFanatics!</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
</resources>