<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:srcCompat="@drawable/d98dde45d242734"
        android:contentDescription="@string/pokemon_text"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:inputType="text"
        android:autofillHints="username"
        android:fontFamily="serif-monospace"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:autofillHints="password"
        android:fontFamily="serif-monospace"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:backgroundTint="#FFEB3B"
        app:cornerRadius="210dp" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        app:backgroundTint="#FFEB3B"
        app:cornerRadius="210dp" />

</LinearLayout>