<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pokemon_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/pokemon_image"
        android:src="@drawable/pokeball_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_hollow"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:text="@string/pokemon_name"
        android:textSize="35sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/pokemon_type_1_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="15dp"
                android:text="@string/pokemon_type"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:visibility="visible"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/pokemon_type_2_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:text="@string/pokemon_type"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pokemon_evolution_card_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/pokemon_evolution_1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/pokemon_name"
                android:padding="15dp"
                android:src="@drawable/pokeball_icon" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pokemon_evolution_card_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:visibility="visible"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/pokemon_evolution_2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/pokemon_name"
                android:padding="15dp"
                android:src="@drawable/pokeball_icon" />

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_to_team_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_to_team"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_from_team_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/remove_from_team"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>